0.9
------------------
- latcp now shows local ports too
- Send group numbers with queued connect request
- Increased maximum number of connections to 255


0.8 25th July 2000
------------------
- Don't die if a terminal server user presses ^C
- Added groups for incoming and outgoing services
- latcp is no longer on the path in latd.conf. Instead use the environment
  variable $LATCP to invoke latcp.
- Added support for queued outgoing connections
- Don't accept services until latcp has finished


0.7  7th June 2000
------------------
- Add keepalive timer
- Add latcp control of keepalive timer & retransmit limit
- Fixed crash if you run out of PTYs
- Add latcp -d command to show daemon configuration. Use latcp -d -l to
  show learned services
- Added, oh, loads more latcp commands. All of them apart from group codes in
  fact
- You now MUST start the daemon from latcp. This is so that any parameters
  modified in /etc/latd.conf take effect before any connections are established
  or broadcasts sent
- MANPAGES!!
- Now converts LF to CR/LF when printing the issue file
- Doesn't reduce CR/LF to just LF when doing reverse LAT
- latcp returns error status to the shell
- latcp -d -lv (long version of services list)


0.6 27th May 2000
-----------------
- New version number. Now a beta release
- Lots of changes, far too many to relate here totally so these are highlights:
- latcp is now functional. It should be used to start/stop latd. see
  README.LATCP for the details
- reverse LAT now works
- Fixed Disconnect problem with Tru64. I hope this will also fix a similar 
  problem with DECserver 500s
- now binds to the requested ethernet card so it doesn't hear messages it can't
  respond to.


0.0.5 15th April 2000
---------------------
- Started the NEWS file
- Now works with DECserver 200
- Much improved speed due to better slot packing
- Some (non-working) reverse-LAT code
- Tidied serversession.cc
- Added -c parameter to specify the circuit timer period